--- a/website/style.css
+++ b/website/style.css
@@ -100,6 +100,7 @@ button {
 #entryHolder {
     font-size: large;
     width: 400px;
+    background-color: white;
     border: 2px solid black;
     border-radius: 10px;
     box-shadow: 3px 3px 5px black;
@@ -107,8 +108,13 @@ button {
 
 .icon {
     display: block;
+    margin-top: 20px;
+    margin-bottom: 20px;
     margin-left: auto;
     margin-right: auto;
+    background-color: white;
+    border: 1px solid black;
+    border-radius: 50%;
 }
 
 footer {
