--- a/website/style.css
+++ b/website/style.css
@@ -117,6 +117,11 @@ button {
     border-radius: 50%;
 }
 
+#date,
+#temp {
+    margin-bottom: 10px;
+}
+
 footer {
     width: 100%;
     text-align: center;
