--- a/website/style.css
+++ b/website/style.css
@@ -100,6 +100,7 @@ button {
 #entryHolder {
     font-size: large;
     width: 400px;
+    padding: 20px;
     background-color: white;
     border: 2px solid black;
     border-radius: 10px;
